feat: SEO improvements, remove em dashes, add page metadata
- Enhanced SEO: canonical URL, metadataBase, richer keywords, publisher
- Enriched JSON-LD schema: image, address, worksFor, alumniOf, inLanguage
- Added metadata layouts for /projets and /contact pages
- Replaced all em dashes with regular dashes across 15 files
- Updated manifest.json theme to #141414
- Fixed certifications count (9), years experience (4+)
- Rewrote frise, projets, competences, contact pages (Netflix dark style)
- All pages: no anime.js, all content visible immediately

--- a/src/lib/i18n/translations/de.json
+++ b/src/lib/i18n/translations/de.json
@@ -76,7 +76,7 @@
       "caption": "Zusammenarbeit",
       "title": "Lust auf {accent}?",
       "accent": "Zusammenarbeit",
-      "description": "Ich bin immer offen für Möglichkeiten — Praktika, Werkstudentenstellen, Open-Source-Projekte oder fachlichen Austausch.",
+      "description": "Ich bin immer offen für Möglichkeiten - Praktika, Werkstudentenstellen, Open-Source-Projekte oder fachlichen Austausch.",
       "contact": "Kontaktieren",
       "github": "GitHub-Profil"
     },
@@ -87,7 +87,7 @@
   "timeline": {
     "caption": "Mein Werdegang",
     "title": "Erfahrung & Ausbildung",
-    "description": "Von der Marine über Krankenhäuser bis zur Leitung der EFREI-Studentenvertretung — jeder Schritt hat meine einzigartige Vision des Data Engineering geprägt.",
+    "description": "Von der Marine über Krankenhäuser bis zur Leitung der EFREI-Studentenvertretung - jeder Schritt hat meine einzigartige Vision des Data Engineering geprägt.",
     "filters": {
       "all": "Alle",
       "experience": "Erfahrung",
