feat: add formation page with hardskills, softskills, courses
- Add Lycee Saint-Joseph Villejuif (2019-2022, Spe Maths/Physique/SVT puis Maths/SVT)
- Add hardSkills extracted from RNCP 35541 + RNCP 40875
- Add 12 softSkills with sources and levels
- Add formationCourses: all courses by year (Bachelor, Master, Erasmus, PMM, Lycee)
- Create /formation page with Pokedex theme (tabs, courses, skills bars)
- Add /formation to Header, Footer nav, sitemap
- Add RNCP 40875 certification (2027, pending)
- Fix Master spelling, timeline years to 2019
- Add Lycee Saint-Joseph logo mapping

--- a/src/lib/i18n/translations/de.json
+++ b/src/lib/i18n/translations/de.json
@@ -5,6 +5,7 @@
     "projects": "Projekte",
     "skills": "Fähigkeiten",
     "contact": "Kontakt",
+    "formation": "Ausbildung",
     "skipToContent": "Zum Hauptinhalt springen"
   },
   "hero": {
