--- a/src/lib/i18n/translations/es.json
+++ b/src/lib/i18n/translations/es.json
@@ -5,6 +5,7 @@
     "projects": "Proyectos",
     "skills": "Competencias",
     "contact": "Contacto",
+    "formation": "Formacion",
     "skipToContent": "Ir al contenido principal"
   },
   "hero": {
