--- a/src/lib/i18n/translations/fr.json
+++ b/src/lib/i18n/translations/fr.json
@@ -5,6 +5,7 @@
     "projects": "Projets",
     "skills": "Compétences",
     "contact": "Contact",
+    "formation": "Formation",
     "skipToContent": "Aller au contenu principal"
   },
   "hero": {
