--- a/src/lib/i18n/translations/it.json
+++ b/src/lib/i18n/translations/it.json
@@ -5,6 +5,7 @@
     "projects": "Progetti",
     "skills": "Competenze",
     "contact": "Contatto",
+    "formation": "Formazione",
     "skipToContent": "Vai al contenuto principale"
   },
   "hero": {
