--- a/src/lib/i18n/translations/nl.json
+++ b/src/lib/i18n/translations/nl.json
@@ -5,6 +5,7 @@
     "projects": "Projecten",
     "skills": "Vaardigheden",
     "contact": "Contact",
+    "formation": "Opleiding",
     "skipToContent": "Ga naar hoofdinhoud"
   },
   "hero": {
