--- a/src/lib/i18n/translations/pl.json
+++ b/src/lib/i18n/translations/pl.json
@@ -5,6 +5,7 @@
     "projects": "Projekty",
     "skills": "Umiejętności",
     "contact": "Kontakt",
+    "formation": "Szkolenie",
     "skipToContent": "Przejdź do głównej treści"
   },
   "hero": {
