--- a/src/lib/i18n/translations/en.json
+++ b/src/lib/i18n/translations/en.json
@@ -5,6 +5,7 @@
     "projects": "Projects",
     "skills": "Skills",
     "contact": "Contact",
+    "formation": "Training",
     "skipToContent": "Skip to main content"
   },
   "hero": {
